# personal_openclaw

./: .gitignore  .secrets.baseline  CHANGELOG.md  README.md  docker-compose.finance-sidecar.yml  docker-compose.finance-sidecar.yml.bak-20260327-compose-fix  package.json
VCPToolBox/: .dockerignore  .gitignore  AGENTS.md  AgentDream.md  Dockerfile  EPAModule.js  EmbeddingUtils.js  FileFetcherServer.js  KnowledgeBaseManager.js  LICENSE  LinuxNotify.py  ModelRedirect.json.example  NEWAPI_MONITOR_前端接入与配置说明.md  Plugin.js  README For VCPChat.md  README.md  README_en.md  README_ja.md  (+39 more)
VCPToolBox/Plugin/MIDITranslator/: Cargo.toml  MIDITranslator.js  config.env.example  midi_quantizer.node  package-lock.json.block  package.json  plugin-manifest.json.block
VCPToolBox/Plugin/MIDITranslator/src/: lib.rs
VCPToolBox/vcp-installer-source/: .gitignore  Cargo.toml  patch_main.js
VCPToolBox/vcp-installer-source/docs/: P0-项目骨架与共享类型.md  P1-下载引擎与解压.md  P2-Portable运行时管理.md  P3-部署引擎.md  P4-配置表TUI.md  P5-体验完善.md  开发文档.md
VCPToolBox/vcp-installer-source/src/: app.rs  main.rs  web_config.rs  web_config_html.rs
VCPToolBox/vcp-installer-source/src/installer/: config_gen.rs  detector.rs  downloader.rs  extractor.rs  git_ops.rs  mod.rs  msvc_ops.rs  npm_ops.rs  pip_ops.rs
VCPToolBox/vcp-installer-source/src/runtime/: mod.rs  portable_git.rs  portable_node.rs  portable_python.rs
VCPToolBox/vcp-installer-source/src/ui/: complete.rs  component_select.rs  config_form.rs  env_check.rs  mod.rs  progress.rs  welcome.rs
VCPToolBox/vcp-installer-source/src/utils/: env.rs  mod.rs  network.rs  platform.rs
(+642 files in other folders)
